--- a/cordova/package.json
+++ b/cordova/package.json
@@ -9,16 +9,21 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-fcm-with-dependecy-updated": {},
-      "cordova-plugin-deeplinks": {}
+      "cordova-plugin-deeplinks": {},
+      "phonegap-plugin-push": {
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "11.6.2"
+      }
     }
   },
   "dependencies": {
-    "cordova-android": "^6.4.0",
+    "cordova-android": "^7.1.4",
     "cordova-plugin-deeplinks": "^1.1.0",
-    "cordova-plugin-fcm-with-dependecy-updated": "^2.3.0",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "fcm": "^1.0.3"
+    "cordova-support-google-services": "^1.1.0",
+    "fcm": "^1.0.3",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.2.3"
   }
 }
